--- a/templates/home.html
+++ b/templates/home.html
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Accessories</a>
+                  <a class="nav-link" href="/accessories">Accessories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">Clothing</a>
+                    <a class="nav-link" href="/shirt">Clothing</a>
                 </li>
   
               <form class="form-inline my-2 my-lg-0">
@@ -45,7 +45,7 @@
           </nav>
         <div class="card-deck">
             <div class="card">
-                <a href="login.html">
+                <a href="/shirt">
                 <img class="card-img-top" src="../static/img/Royal_Blue_Casual.jpg" alt="Card image cap" width="180" height="260">
                 <div class="card-body">
                     <h5 class="card-title">Clothing</h5>
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="index.html">
+                <a href="/accessories">
                 <img class="card-img-top" src="../static/images/Earrings2/1.png" alt="Card image cap" width="180" height="260">
                 <div class="card-body">
                     <h5 class="card-title">Accessories</h5>
