--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
             {%if img_list%}
 
             {% for name, index in img_list %}
-            <img src="{{name}}">
+            <img src="{{name}}" width="192" height="256">
             <label>
                 <input type="radio" name="optionsRadios" id="options{{index}}" value="option{{index}}">
             </label>
