updated main.py index.html and login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
 <div class="container" bgcolor="#FFA500">
     <form action="/upload" method="post" enctype="multipart/form-data">
         <p>Upload your person picture file：
-        <p/>
+        </p>
 
         <input id="person_image" name="person_image" type="file" class="file" data-show-preview="false"
                accept=".jpg, .jpeg">
@@ -60,9 +60,9 @@
             {% endfor %}
             {%endif%}
             
-            <p/>
+          </p>
             
-            <p>Or EVEN your personal cloth image file!：<p/>
+            <p>Or EVEN your personal cloth image file!：</p>
             
 
         <input id="cloth_image" name="cloth_image" type="file" class="file" data-show-preview="false"
